samples/_failures_safe/1761156950_e1dae6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cc5eda7.c: In function ‘main’:
./samples/SAFE/__tmp_9cc5eda7.c:176:9: error: expected ‘;’ at end of input
  176 |     free
      |         ^
      |         ;
./samples/SAFE/__tmp_9cc5eda7.c:176:5: error: expected declaration or statement at end of input
  176 |     free
      |     ^~~~
